<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditAppointmentActivity" >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textView_appointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_title_margin_top"
        android:fontFamily="cursive"
        android:text="@string/appointment"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textColorHighlight="@color/primary_dark"
        android:textColorHint="@color/primary_dark"
        android:textColorLink="@color/primary"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editText_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:fontFamily="sans-serif"
        android:hint="@string/title"
        android:inputType="text"
        android:padding="5dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textColorHighlight="@color/secondary"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_appointment" />

    <EditText
        android:id="@+id/editText_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:fontFamily="sans-serif"
        android:hint="@string/description"
        android:inputType="text"
        android:padding="5dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textColorHighlight="@color/secondary"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_title" />

    <EditText
        android:id="@+id/editText_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:fontFamily="sans-serif"
        android:hint="@string/note"
        android:inputType="text"
        android:padding="5dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textColorHighlight="@color/secondary"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_description" />

    <CalendarView
        android:id="@+id/calendarView_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:fontFamily="sans-serif"
        android:padding="5dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textColorHighlight="@color/secondary"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_note" />

    <EditText
        android:id="@+id/editText_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:fontFamily="sans-serif"
        android:hint="@string/place"
        android:inputType="text"
        android:padding="5dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textColorHighlight="@color/secondary"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarView_date" />

    <EditText
        android:id="@+id/editText_contactPerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:fontFamily="sans-serif"
        android:hint="@string/contact_person"
        android:inputType="text"
        android:padding="5dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textColorHighlight="@color/secondary"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_place" />

    <EditText
        android:id="@+id/editText_contactEntity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:fontFamily="sans-serif"
        android:hint="@string/contact_entity"
        android:inputType="text"
        android:padding="5dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textColorHighlight="@color/secondary"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_contactPerson" />

    <EditText
        android:id="@+id/editText_contactMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:fontFamily="sans-serif"
        android:hint="@string/contact_medium"
        android:inputType="text"
        android:padding="5dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textColorHighlight="@color/secondary"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_contactEntity" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:fontFamily="sans-serif"
        android:padding="5dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textColorHighlight="@color/secondary"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_contactMedium"/>

    <Button
        android:id="@+id/button_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:background="@color/primary"
        android:fontFamily="sans-serif"
        android:onClick="finish"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text="@string/finish"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_category" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:layout_marginBottom="@dimen/default_margin_top"
        android:background="@color/primary_light"
        android:fontFamily="sans-serif"
        android:onClick="cancel"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/primary_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_finish" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>